[package]
name = "fancy-duration"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Erik Hollensbe <github@hollensbe.org>"]
readme = "README.md"
keywords = ["time", "duration"]
description = "Fancy text representations for durations"
repository = "https://github.com/erikh/fancy-duration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "^0.3"
itoa = "^1"
serde = "^1"
anyhow = "^1"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "basic"
harness = false
