[package]
name = "fancy-duration"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Erik Hollensbe <github@hollensbe.org>"]
readme = "README.md"
keywords = ["time", "duration"]
description = "Fancy text representations for durations"
repository = "https://github.com/erikh/fancy-duration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "^0.3", features = [ "serde" ] }
itoa = "^1"
serde = { version = "^1", features = [ "derive" ] }
serde_derive = "^1"
anyhow = "^1"
regex = "^1"

[dev-dependencies]
criterion = "^0.3"
serde_json = "^1"

[[bench]]
name = "basic"
harness = false
