[package]
name = "fancy-duration"
version = "0.9.1"
edition = "2021"
license = "MIT"
authors = ["Erik Hollensbe <github@hollensbe.org>"]
readme = "README.md"
keywords = ["time", "duration", "parse", "chrono", "human", "serde", "human-friendly"]
description = "Fancy text representations for durations"
repository = "https://github.com/erikh/fancy-duration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
regex = "^1"
lazy_static = "^1"

time = { version = "^0.3", features = [ "serde" ], optional = true }
serde = { version = "^1", features = [ "derive" ], optional = true }
serde_derive = { version = "^1", optional = true }
chrono = { version = "^0.4", features = [ "serde" ], optional = true }

[features]
default = [ ]
time = [ "dep:time" ]
chrono = [ "dep:chrono" ]
serde = [ "dep:serde", "dep:serde_derive" ]

[dev-dependencies]
criterion = "^0.5"
serde_json = "^1"

[[bench]]
name = "basic"
harness = false
